--- a/src/styles/Market/Sell/MarketSellingItemModal.module.css
+++ b/src/styles/Market/Sell/MarketSellingItemModal.module.css
@@ -7,7 +7,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  position: absolute;
+  position: fixed;
+  top: 0;
+  left: 0;
   z-index: 10;
   width: 100%;
   height: 100%;
@@ -18,26 +20,25 @@
   height: 20rem;
   display: flex;
   flex-direction: column;
-  /* box-shadow: inset 0 0 20px red; */
   background-color: white;
   border-radius: 10px;
   position: relative;
   z-index: 10;
 }
-  .background {
-    position: absolute;
-    background-color: white;
-    top: 0;
-    left: 0;
-    opacity: 1;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-  }
+.background {
+  position: absolute;
+  background-color: white;
+  top: 0;
+  left: 0;
+  opacity: 1;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
 /* ------------------------------------------------------------ */
 .button {
-  margin: 1rem 1rem auto auto ;
+  margin: 1rem 1rem auto auto;
   width: 2rem;
   font-size: 1.5rem;
   background: none;
@@ -52,7 +53,6 @@
   height: 100%;
 }
 .aside {
-  /* box-shadow: inset 0 0 20px blue; */
   width: 100%;
   display: flex;
   align-items: center;
@@ -65,28 +65,17 @@
   object-fit: cover;
 }
 .main {
-  /* box-shadow: inset 0 0 20px green; */
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: start;
   justify-content: center;
   gap: 1rem;
   font-weight: bold;
 }
-.main > button {
-  margin-left: auto;
-  margin-right: 1rem;
-  width: 5rem;
-  height: 2rem;
+.main > div {
+  width: 100%;
+  padding: 0 1rem;
+  box-sizing: border-box;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid black;
-  background: linear-gradient(to bottom, #FFFFFF, #FCFF4F);
-  border-radius: 5px;
-  text-decoration: none;
-  color: black;
-  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.5);
-  cursor: pointer;
+  justify-content: end;
 }
