--- a/src/styles/User/UserJoin.module.css
+++ b/src/styles/User/UserJoin.module.css
@@ -3,11 +3,12 @@
   height: 100vh;
   padding: 4rem 20rem;
   box-sizing: border-box;
-  background: linear-gradient(to bottom, #D8FAFF, #B6CDFF);
+  background: linear-gradient(to bottom, #d8faff, #b6cdff);
 }
 .wrapper {
   height: 100%;
   display: flex;
+  gap: 2rem;
   flex-direction: column;
   align-items: center;
 }
@@ -45,7 +46,7 @@
   display: none;
 }
 .main_header > div {
-  font-weight: bold;
+  font-size: 1rem;
 }
 .main_header > div:hover {
   color: gray;
@@ -54,8 +55,8 @@
 }
 
 .main_img1 {
-  width: 10rem;
-  height: 10rem;
+  width: 8rem;
+  height: 8rem;
   padding: 0.2rem;
   box-sizing: border-box;
   border-radius: 100%;
@@ -93,7 +94,7 @@
 }
 .main_main_contents {
   display: flex;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 .main_main_contents > input {
   padding: 0.5rem;
@@ -101,9 +102,12 @@
   border: none;
 }
 .main_main_contents > button {
+  height: 2.5rem;
+  font-size: 1rem;
   padding: 0.5rem;
+  box-sizing: border-box;
   border: 1px solid black;
-  background: linear-gradient(to bottom, #FFFFFF, #FCFF4F);
+  background: linear-gradient(to bottom, #ffffff, #fcff4f);
   border-radius: 5px;
   text-decoration: none;
   color: black;
