--- a/src/styles/User/UserLogin.module.css
+++ b/src/styles/User/UserLogin.module.css
@@ -3,7 +3,7 @@
   height: 100vh;
   padding: 4rem 20rem;
   box-sizing: border-box;
-  background: linear-gradient(to bottom, #D8FAFF, #B6CDFF);
+  background: linear-gradient(to bottom, #d8faff, #b6cdff);
 }
 .wrapper {
   height: 100%;
@@ -14,7 +14,6 @@
 }
 /* ------------------------------------------------------------ */
 .header {
-  /* box-shadow: inset 0 0 20px red; */
   width: 100%;
   height: 30%;
   text-align: center;
@@ -26,10 +25,6 @@
   font-size: 3rem;
 }
 .main {
-  /* box-shadow: inset 0 0 20px blue; */
-  box-shadow: 0 4px 20px 5px rgba(38, 49, 255, 0.3);
-  padding: 6rem 4rem;
-  background-color: white;
   border-radius: 10px;
   width: 50%;
   display: flex;
@@ -37,11 +32,10 @@
   justify-content: center;
 }
 .main_wrapper {
+  width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 0.2rem;
-  align-items: center;
-  justify-content: center;
+  gap: 1rem;
 }
 /* ------------------------------------------------------------ */
 .kakao {
@@ -65,24 +59,32 @@
   background-color: #333;
   color: #fff;
   font-size: 16px;
+  padding: 0.8rem;
   box-sizing: border-box;
   border: none;
-  border-radius: 5px;
+  border-radius: 10px;
   display: flex;
   align-items: center;
-  justify-content: center;
   gap: 0.5rem;
   cursor: pointer;
 }
 .github > img {
-  width: 1.3rem;
-  height: 1.3rem;
+  width: 1.5rem;
+  height: 1.5rem;
   aspect-ratio: 1/1;
+  border-radius: 100%;
+  background-color: #333;
 }
-.kakao, .github {
+.github > p {
+  flex-grow: 1;
+  font-size: 0.9rem;
+}
+.kakao,
+.github {
   transition: transform 0.1s ease-in-out;
+  width: 100%;
 }
-.kakao:hover, .github:hover {
+.kakao:hover,
+.github:hover {
   transform: scale(1.05);
-  border: 2px solid gray;
 }
