--- a/src/styles/Minihome/MinihomeReplyItem.module.css
+++ b/src/styles/Minihome/MinihomeReplyItem.module.css
@@ -47,19 +47,23 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  height: 100%;
   background-color: white;
   border-radius: 5px;
-  padding: 0.5rem;
   box-sizing: border-box;
   font-size: 1rem;
 }
+.main_bottom > p {
+  padding: 0.5rem;
+  flex-grow: 1;
+}
 .main_buttons {
-  width: 10%;
   display: flex;
   gap: 0.5rem;
 }
 .main_buttons > p {
   width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
