--- a/src/styles/Market/Sell/MarketMySellingList.module.css
+++ b/src/styles/Market/Sell/MarketMySellingList.module.css
@@ -94,13 +94,24 @@
 .main_items_header {
   width: 100%;
   height: 2.5rem;
-  background-color: white;
+  /* background-color: white; */
   border-radius: 10px;
   box-sizing: border-box;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  /* opacity: 0.7; */
+  position: relative;
+  font-weight: bold;
+}
+.main_items_header_background {
+  position: absolute;
+  width: 100%;
+  height: 100%;
   opacity: 0.7;
+  background-color: white;
+  z-index: -10;
+  border-radius: 10px;
 }
 .main_items_header > div {
   width: 100%;
