--- a/src/styles/Minihome/MiniHomeMain.module.css
+++ b/src/styles/Minihome/MiniHomeMain.module.css
@@ -1,7 +1,7 @@
 .container {
   min-width: 68rem;
   min-height: 100vh;
-  padding: 2rem 4rem;
+  padding: 4rem;
   box-sizing: border-box;
   background: linear-gradient(to bottom, #d8faff, #b6cdff);
   display: flex;
@@ -22,10 +22,11 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.8rem;
 }
 .main_people {
-  font-weight: bold;
+  /* font-weight: bold; */
+  margin-left: 0.5rem;
 }
 .main_section_1 {
   width: 100%;
