--- a/src/styles/Minihome/MinihomeReplyItem.module.css
+++ b/src/styles/Minihome/MinihomeReplyItem.module.css
@@ -32,6 +32,9 @@
   padding: 0.2rem;
   box-sizing: border-box;
 }
+.main_reply_date {
+  font-size: 0.9rem;
+}
 .main_reply_content {
   display: flex;
   flex-direction: column;
