--- a/src/styles/Minihome/Adorn/MinihomeAdorn.module.css
+++ b/src/styles/Minihome/Adorn/MinihomeAdorn.module.css
@@ -34,7 +34,8 @@
   flex-direction: column;
   gap: 1rem;
   height: 100%;
-  overflow: hidden;
+  overflow: scroll;
+  scrollbar-width: none;
 }
 
 .header {
@@ -68,7 +69,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 .main_nav {
   width: 100%;
