--- a/src/styles/Minihome/Adorn/MinihomeAdornItemList.module.css
+++ b/src/styles/Minihome/Adorn/MinihomeAdornItemList.module.css
@@ -1,8 +1,8 @@
 .main {
   height: 100%;
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(4, 1fr);
   gap: 1rem;
   overflow: scroll;
   scrollbar-width: none;
@@ -13,8 +13,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 10px;
 }
 .main > div > img {
   width: 6rem;
   height: 6rem;
+  border-radius: 10px;
 }
