--- a/src/styles/User/UserLogin.module.css
+++ b/src/styles/User/UserLogin.module.css
@@ -36,26 +36,12 @@
   gap: 1rem;
 }
 /* ------------------------------------------------------------ */
-.kakao {
-  border: none;
-  border-radius: 10px;
-  background: none;
-  width: 100%;
-  width: 12rem;
-  height: 3rem;
-}
-.kakao > img {
-  cursor: pointer;
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
-}
+.kakao,
 .github {
   width: 12rem;
   height: 3rem;
-  background-color: #333;
-  color: #fff;
+  background-color: #fee500;
+  color: #2d2d2d;
   font-size: 16px;
   padding: 0.8rem;
   box-sizing: border-box;
@@ -66,6 +52,11 @@
   gap: 0.5rem;
   cursor: pointer;
 }
+.github {
+  background-color: #333;
+  color: #fff;
+}
+.kakao_img,
 .github > img {
   width: 1.5rem;
   height: 1.5rem;
@@ -73,6 +64,7 @@
   border-radius: 100%;
   background-color: #333;
 }
+.kakao > p,
 .github > p {
   flex-grow: 1;
   font-size: 0.9rem;
