--- a/src/styles/Explore/ExploreItem.module.css
+++ b/src/styles/Explore/ExploreItem.module.css
@@ -1,4 +1,4 @@
-.main_list {
+.list {
   height: 4.5rem;
   border-radius: 10px;
   display: flex;
@@ -8,7 +8,7 @@
   position: relative;
   z-index: 10;
 }
-.main_background {
+.list_background {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -17,14 +17,14 @@
   z-index: -10;
   border-radius: 10px;
 }
-.main_list > div {
+.list > p {
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.main_list > div > img {
+.list > p > img {
   width: 3rem;
   height: 3rem;
   border-radius: 100%;
