--- a/src/styles/Explore/ExploreMain.module.css
+++ b/src/styles/Explore/ExploreMain.module.css
@@ -1,7 +1,7 @@
 .container {
   min-width: 68rem;
   height: 100vh;
-  padding: 2rem 4rem;
+  padding: 4rem;
   box-sizing: border-box;
   background: linear-gradient(to bottom, #D8FAFF, #B6CDFF);
   display: flex;
@@ -13,16 +13,15 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-}
-/* ------------------------------------------------------------ */
-.header {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
   gap: 2rem;
 }
-.header_wrapper {
+/* ------------------------------------- */
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.header_aside {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -31,14 +30,7 @@
 .header_title {
   font-size: 1.5rem;
 }
-
-.header_aside {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  /* height: 3.5rem; */
-}
-.header_aside > select {
+.header_select {
   margin-left: auto;
   width: 6rem;
   height: 2rem;
@@ -46,7 +38,14 @@
   font-size: 1rem;
   text-align: center;
 }
-.header_main {
+/* ------------------------------------- */
+.section {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.section_nav {
   height: 3rem;
   display: flex;
   align-items: center;
@@ -55,7 +54,7 @@
   position: relative;
   z-index: 10;
 }
-.header_main > div {
+.section_nav > div {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -66,7 +65,7 @@
   border-radius: 10px;
   font-weight: bold;
 }
-.header_background {
+.section_nav_background {
   position: absolute;
   background-color: white;
   opacity: 0.4;
@@ -74,17 +73,15 @@
   width: 100%;
   height: 100%;
 }
-/* -------------------------------------------------------------- */
-.main {
+/* ------------------------------------- */
+.article {
   width: 100%;
   overflow: scroll;
   scrollbar-width: none;
 }
-.main_upperlist {
+.article_upperlist {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
   list-style: none;
-  /* scrollbar-width: none;
-  overflow: scroll; */
 }
