--- a/src/styles/Explore/ExploreMain.module.css
+++ b/src/styles/Explore/ExploreMain.module.css
@@ -3,7 +3,7 @@
   height: 100vh;
   padding: 4rem;
   box-sizing: border-box;
-  background: linear-gradient(to bottom, #D8FAFF, #B6CDFF);
+  background: linear-gradient(to bottom, #d8faff, #b6cdff);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -54,7 +54,7 @@
   position: relative;
   z-index: 10;
 }
-.section_nav > div {
+.section_nav > p {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -63,7 +63,7 @@
   width: 100%;
   height: 100%;
   border-radius: 10px;
-  font-weight: bold;
+  font-family: "Pretendard-Bold", sans-serif;
 }
 .section_nav_background {
   position: absolute;
