--- a/src/styles/Explore/ExploreItem.module.css
+++ b/src/styles/Explore/ExploreItem.module.css
@@ -17,14 +17,14 @@
   z-index: -10;
   border-radius: 10px;
 }
-.list > p {
+.list > p, .list > div {
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.list > p > img {
+.list > div > img {
   width: 3rem;
   height: 3rem;
   border-radius: 100%;
