--- a/src/styles/Minihome/MiniHomeMain.module.css
+++ b/src/styles/Minihome/MiniHomeMain.module.css
@@ -13,22 +13,21 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 2rem;
 }
-/* ---------------------------------------------------- */
-.main {
+/* ----------------------------------- */
+.section {
   flex-grow: 1;
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 0.8rem;
+  gap: 1rem;
 }
-.main_people {
-  /* font-weight: bold; */
+.section_aside {
   margin-left: 0.5rem;
 }
-.main_section_1 {
+.section_article_1 {
   width: 100%;
   height: 30rem;
   background-color: white;
@@ -37,7 +36,7 @@
   padding: 1rem;
   box-sizing: border-box;
 }
-.main_section_2 {
+.section_article_2 {
   flex-grow: 1;
   height: 30rem;
   position: relative;
@@ -50,7 +49,7 @@
   flex-direction: column;
   gap: 1rem;
 }
-.background_section {
+.section_article_2_background {
   width: 100%;
   height: 100%;
   position: absolute;
