--- a/src/styles/Market/Enroll/MarketEnrollPreview.module.css
+++ b/src/styles/Market/Enroll/MarketEnrollPreview.module.css
@@ -5,34 +5,13 @@
   display: flex;
   border-radius: 10px;
 }
-.header_background {
+.background {
   position: absolute;
   width: 100%;
   height: 100%;
   background-color: white;
   opacity: 0.5;
   border-radius: 10px;
-}
-/* ------------------------------ */
-.section_header_wrapper {
-  position: relative;
-  width: 100%;
-  height: 19rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.section_header_text {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1.5rem;
-  font-weight: bold;
 }
 /* ------------------------------ */
 .section_header {
@@ -60,34 +39,23 @@
 .section_article {
   position: relative;
   width: 100%;
-  padding: 2rem;
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  justify-content: center;
-  gap: 1rem;
-}
-.section_article_wrapper {
-  width: 100%;
   height: 100%;
+  padding: 2rem;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: start;
   justify-content: space-between;
+  gap: 1rem;
   border-radius: 10px;
-}
-.section_article_wrapper > p {
-  flex-grow: 1;
-  display: flex;
-  align-items: center;
-  width: 100%;
 }
 /* ------------------------------------------- */
 table {
   display: flex;
   gap: 1rem;
-  height: 100%;
+  height: 80%;
   width: 100%;
+  font-size: 1rem;
 }
 thead {
   width: 20%;
@@ -99,7 +67,6 @@ thead > tr {
   align-items: start;
   justify-content: space-around;
   color: #717171;
-  font-size: 1rem;
 }
 tbody {
   width: 100%;
@@ -113,11 +80,125 @@ tbody > tr {
   justify-content: space-around;
   color: #2d2d2d;
   font-weight: bold;
-  font-size: 1rem;
 }
 .section_article_button {
   width: 100%;
+  height: 20%;
   display: flex;
   align-items: center;
   justify-content: end;
+}
+/* ------------------------------ */
+.section_no_contents {
+  position: relative;
+  width: 100%;
+  height: 20rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.section_no_text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+/* 반응형 UI */
+@media (width <= 1024px) {
+  .section_header {
+    width: 8rem;
+    height: 15rem;
+    padding: 1rem;
+  }
+  .section_header > img {
+    width: 8rem;
+    height: 8rem;
+  }
+  .section_header_nonImg {
+    width: 8rem;
+    height: 8rem;
+  }
+  .section_article {
+    padding: 1rem;
+    justify-content: center;
+  }
+  table {
+    font-size: 0.875rem;
+  }
+  thead {
+    width: 20%;
+  }
+  thead > tr {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    gap: 1rem;
+    color: #717171;
+  }
+  tbody {
+    width: 100%;
+  }
+  tbody > tr {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    gap: 1rem;
+    color: #2d2d2d;
+    font-weight: bold;
+  }
+
+  /* ------------------------------ */
+  .section_no_contents {
+    position: relative;
+    width: 100%;
+    height: 20rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .section_no_text {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.2rem;
+    font-weight: bold;
+  }
+}
+
+@media (width <= 640px) {
+  .section {
+    height: 15rem;
+  }
+  .section_header {
+    padding: 0.25rem;
+  }
+  .section_article {
+    padding: 0.25rem;
+  }
+  .section_article_button {
+    align-items: start;
+  }
+  .section_no_contents {
+    height: 15rem;
+  }
+  .section_no_text {
+    font-size: 1.2rem;
+  }
 }
