--- a/src/styles/Market/Enroll/MarketEnroll.module.css
+++ b/src/styles/Market/Enroll/MarketEnroll.module.css
@@ -3,20 +3,149 @@
   height: 100vh;
   padding: 4rem;
   box-sizing: border-box;
-  background: linear-gradient(to bottom, #FFE9E9, #FF9FB1);
+  background: linear-gradient(to bottom, #ffe9e9, #ff9fb1);
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
 }
-.wrapper {
+.main {
   width: 60rem;
   height: 100%;
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  border-radius: 10px;
-  position: relative;
-  z-index: 5;
+  overflow: hidden;
+  color: #2d2d2d;
 }
-/* ------------------------------------------------------------ */
+.main_header {
+  height: 2.5rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.main_header_title {
+  font-size: 1.5rem;
+}
+/* -------------------------------------------- */
+.section {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  overflow: scroll;
+  scrollbar-width: none;
+}
+.section_wrapper {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.section_title {
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+.section_message {
+  font-size: 1.125rem;
+  font-weight: bold;
+  height: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.section_article {
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  gap: 0.5rem;
+  overflow: scroll;
+  scrollbar-width: none;
+}
+/* ---------------------------------------------- */
+.numberList {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  list-style: none;
+}
+.pageNum {
+  cursor: pointer;
+  font-weight: bolder;
+  padding: 0.3rem;
+  width: 1rem;
+  text-align: center;
+  height: 1rem;
+}
+.pageNum:hover {
+  color: white;
+}
+.active_pageNum {
+  color: white;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  font-weight: bolder;
+  padding: 0.5rem;
+  width: 1rem;
+  text-align: center;
+  background-color: gray;
+}
+/* 반응형 UI */
+@media (width <= 1024px) {
+  .container {
+    min-width: 375px;
+    padding: 3rem 0.25rem;
+  }
+  .main {
+    gap: 1rem;
+  }
+  .main_header {
+    height: 2rem;
+  }
+  .main_header_title {
+    font-size: 1.2rem;
+  }
+  .section_title {
+    font-size: 1rem;
+  }
+  .section_message {
+    font-size: 1rem;
+  }
+  /* ---------------------------------------------- */
+  .numberList {
+    gap: 0.2rem;
+  }
+  .pageNum {
+    font-size: 0.875rem;
+  }
+  .active_pageNum {
+    font-size: 0.875rem;
+    padding: 0.2rem;
+  }
+}
+@media (width <= 968px) {
+  .section_article {
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+  }
+}
+@media (width <= 815px) {
+  .section_article {
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+  }
+}
+@media (width <= 675px) {
+  .section_article {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+  }
+}
+@media (width <= 548px) {
+  .section_article {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
