--- a/src/styles/Market/Enroll/MarketEnrollItem.module.css
+++ b/src/styles/Market/Enroll/MarketEnrollItem.module.css
@@ -81,8 +81,8 @@
 .article_img {
   aspect-ratio: 1/1;
   object-fit: contain;
-  width: 6rem;
-  height: 6rem;
+  width: 100%;
+  height: 100%;
   border-radius: 10px;
   position: absolute;
 }
@@ -101,3 +101,4 @@
   font-weight: bold;
   font-size: 0.75rem;
 }
+/* 반응형 UI */
