--- a/src/styles/Main/MainPage.module.css
+++ b/src/styles/Main/MainPage.module.css
@@ -166,7 +166,7 @@
     height: 100vh;
   }
   .header {
-    padding: 5rem 0.25rem;
+    padding: 5rem;
   }
   .title {
     font-size: 2rem;
@@ -176,7 +176,6 @@
   }
   .article {
     justify-content: start;
-    padding: 5rem 0.25rem;
   }
   .article > h3 {
     font-size: 1.2rem;
@@ -193,5 +192,13 @@
   .previewItem {
     width: 100%;
     height: 100%;
+  }
+}
+@media (width <= 640px) {
+  .header {
+    padding: 5rem 0.25rem;
+  }
+  .article {
+    padding: 5rem 0.25rem;
   }
 }
