--- a/src/styles/Layouts/modals/MarketItemModal.module.css
+++ b/src/styles/Layouts/modals/MarketItemModal.module.css
@@ -6,6 +6,7 @@
   align-items: center;
   justify-content: center;
   position: absolute;
+  top: 0;
   z-index: 10;
   width: 100%;
   height: 100%;
@@ -44,6 +45,13 @@
   background: none;
   border: none;
   z-index: 10;
+  cursor: pointer;
+  transition-duration: 100ms;
+  transition-timing-function: ease-in-out;
+}
+.close_button:hover {
+  font-weight: bold;
+  color: red;
 }
 /* ---------------------------- */
 .section {
@@ -55,6 +63,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
 }
 .section_aside > img {
   width: 70%;
@@ -62,6 +71,7 @@
   aspect-ratio: 1/1;
   object-fit: cover;
 }
+
 /* ----------------------------------- */
 .section_article {
   width: 100%;
@@ -95,4 +105,115 @@
   position: absolute;
   bottom: 0;
   right: 0;
+}
+/* 반응형 UI */
+@media (width <= 900px) {
+  .container {
+    min-width: 375px;
+    align-items: start;
+    padding: 5rem 0.5rem;
+  }
+  .wrapper {
+    width: 100%;
+    height: 75%;
+  }
+  .section {
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  .section_aside {
+    height: 50%;
+    border: 2px solid gray;
+    border-radius: 5px;
+  }
+  .section_aside > img {
+    width: 50%;
+    height: 50%;
+  }
+  .section_article {
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    font-weight: bold;
+    font-size: 1rem;
+    position: relative;
+  }
+  .section_article_aside {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 2rem;
+  }
+  .section_article_aside > p {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1rem;
+    color: #545454;
+  }
+  .section_article_aside > p > span {
+    width: 70%;
+    text-align: center;
+    color: #2d2d2d;
+  }
+  .section_article_button {
+    position: relative;
+  }
+}
+@media (width <= 640px) {
+  .container {
+    min-width: 375px;
+    align-items: start;
+    padding: 5rem 0.5rem;
+  }
+  .wrapper {
+    width: 100%;
+    height: 75%;
+  }
+  .section {
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  .section_aside {
+    height: 30%;
+    border: 2px solid gray;
+    border-radius: 5px;
+  }
+  .section_aside > img {
+    width: 50%;
+    height: 50%;
+  }
+  .section_article {
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    font-weight: bold;
+    font-size: 1rem;
+    position: relative;
+  }
+  .section_article_aside {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 2rem;
+  }
+  .section_article_aside > p {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1rem;
+    color: #545454;
+  }
+  .section_article_aside > p > span {
+    width: 70%;
+    text-align: center;
+    color: #2d2d2d;
+  }
+  .section_article_button {
+    position: relative;
+  }
 }
