--- a/src/styles/Minihome/ItemBook/MinihomeItemBook.module.css
+++ b/src/styles/Minihome/ItemBook/MinihomeItemBook.module.css
@@ -34,43 +34,8 @@
   gap: 1rem;
   overflow: hidden;
 }
-.section_nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.section_nav > li {
-  list-style: none;
-  width: 100%;
-}
-/* --------------------------------------------- */
-.button {
-  width: 100%;
-  height: 2.5rem;
-  border: none;
-  background: none;
-  font-weight: bold;
-  color: #545454;
-  font-size: 1.125rem;
-  cursor: pointer;
-  border-bottom: 3px solid white;
-}
-.button:hover {
-  color: #588dff;
-}
-.active_button {
-  width: 100%;
-  height: 2.5rem;
-  border: none;
-  background: none;
-  font-weight: bold;
-  font-size: 1.125rem;
-  cursor: pointer;
-  color: #588dff;
-  border-bottom: 3px solid #588dff;
-}
 /* ------------------------------------------ */
-.section_article {
+.article {
   height: 100%;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
@@ -80,7 +45,7 @@
   overflow: scroll;
   scrollbar-width: none;
 }
-.section_article_section {
+.article_section {
   height: 100%;
   overflow: scroll;
   scrollbar-width: none;
